--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ a {
 }
 
 a:hover {
-  color: #0078ff;
+  color: #ff6b00;
   text-decoration: none;
   transition: all 0.5s ease-in-out;
 }
@@ -31,7 +31,7 @@ a:hover {
 }
 
 .color-a {
-  color: #0078ff;
+  color: #ff6b00;
 }
 
 .color-d {
@@ -52,7 +52,7 @@ a:hover {
 
 .box-shadow-a,
 .button:hover {
-  box-shadow: 0 0 0 4px #cde1f8;
+  box-shadow: 0 0 0 4px #ffe4cc;
 }
 
 .display-5 {
@@ -82,7 +82,7 @@ a:hover {
 }
 
 .overlay-mf {
-  background-color: #0078ff;
+  background-color: #ff6b00;
 }
 
 .overlay-mf {
@@ -152,7 +152,7 @@ a:hover {
 .line-mf {
   width: 40px;
   height: 5px;
-  background-color: #0078ff;
+  background-color: #ff6b00;
   margin: 0 auto;
 }
 
@@ -171,7 +171,7 @@ a:hover {
   content: '';
   position: absolute;
   height: 3px;
-  background-color: #0078ff;
+  background-color: #ff6b00;
   width: 100px;
   bottom: -12px;
 }
@@ -208,14 +208,14 @@ a:hover {
   border-radius: 50%;
   line-height: 1.4;
   margin: 0 15px 0 0;
-  box-shadow: 0 0 0 3px #0078ff;
+  box-shadow: 0 0 0 3px #ff6b00;
   transition: all 500ms ease;
 }
 
 .socials .ico-circle:hover {
-  background-color: #0078ff;
+  background-color: #ff6b00;
   color: #fff;
-  box-shadow: 0 0 0 3px #cde1f8;
+  box-shadow: 0 0 0 3px #ffe4cc;
   transition: all 500ms ease;
 }
 
@@ -238,7 +238,7 @@ a:hover {
 }
 
 .list-ico span {
-  color: #0078ff;
+  color: #ff6b00;
   margin-right: 10px;
 }
 
@@ -252,7 +252,7 @@ a:hover {
   line-height: 1.55;
   margin: 0 auto;
   text-align: center;
-  box-shadow: 0 0 0 10px #0078ff;
+  box-shadow: 0 0 0 10px #ff6b00;
   display: block;
 }
 
@@ -271,15 +271,15 @@ a:hover {
   width: 18px;
   height: 7px;
   margin: 5px 5px;
-  background: #cde1f8;
-  border: 0px solid #cde1f8;
+  background: #ffe4cc;
+  border: 0px solid #ffe4cc;
   display: block;
   transition: all 0.6s ease-in-out;
   cursor: pointer;
 }
 
 .owl-theme .owl-dots .owl-dot:hover span {
-  background-color: #cde1f8;
+  background-color: #ffe4cc;
 }
 
 .owl-theme .owl-dots .owl-dot.active span {
@@ -299,7 +299,7 @@ a:hover {
   position: fixed;
   width: 42px;
   height: 42px;
-  background-color: #0078ff;
+  background-color: #ff6b00;
   opacity: .7;
   font-size: 1.6rem;
   line-height: 1.5;
@@ -318,7 +318,7 @@ a:hover {
 .back-to-top {
   position: fixed;
   display: none;
-  background: #0078ff;
+  background: #ff6b00;
   color: #fff;
   width: 44px;
   height: 44px;
@@ -356,7 +356,7 @@ a:hover {
   top: calc(50% - 30px);
   left: calc(50% - 30px);
   border: 6px solid #f2f2f2;
-  border-top: 6px solid #0078ff;
+  border-top: 6px solid #ff6b00;
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -397,10 +397,13 @@ NAVBAR
   background-color: transparent;
   padding-top: 1.563rem;
   padding-bottom: 1.563rem;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
 }
 
 .navbar-b.navbar-reduce {
   box-shadow: 0px 6px 9px 0px rgba(0, 0, 0, 0.06);
+  background-color: rgba(255, 255, 255, 0.95);
 }
 
 .navbar-b.navbar-trans .nav-item,
@@ -473,26 +476,26 @@ NAVBAR
 }
 
 .navbar-b.navbar-reduce .nav-link {
-  color: #0078ff;
+  color: #ff6b00;
 }
 
 .navbar-b.navbar-reduce .nav-link:before {
-  background-color: #0078ff;
+  background-color: #ff6b00;
 }
 
 .navbar-b.navbar-reduce .nav-link:hover {
-  color: #0078ff;
+  color: #ff6b00;
 }
 
 .navbar-b.navbar-reduce .show > .nav-link,
 .navbar-b.navbar-reduce .active > .nav-link,
 .navbar-b.navbar-reduce .nav-link.show,
 .navbar-b.navbar-reduce .nav-link.active {
-  color: #0078ff;
+  color: #ff6b00;
 }
 
 .navbar-b.navbar-reduce .navbar-brand {
-  color: #0078ff;
+  color: #ff6b00;
 }
 
 .navbar-b.navbar-reduce .navbar-toggler span {
@@ -500,9 +503,31 @@ NAVBAR
 }
 
 .navbar-b .navbar-brand {
-  color: #fff;
-  font-size: 1.6rem;
+  color: #1e1e1e;
   font-weight: 600;
+  margin: 0;
+  padding: 0.5rem 0;
+  font-size: 1.7rem;
+  transition: all 0.3s ease;
+}
+
+.navbar-b .navbar-brand img {
+  max-width: 100px;
+  height: auto;
+  transition: all 0.3s ease;
+  filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.1));
+}
+
+.navbar-b .navbar-nav .nav-link {
+  color: #1e1e1e;
+  font-weight: 500;
+  padding: 0.5rem 1rem;
+  transition: all 0.3s ease;
+}
+
+.navbar-b .navbar-nav .nav-link:hover {
+  color: #ff6b00;
+  transform: translateY(-2px);
 }
 
 .navbar-b .navbar-nav .dropdown-item.show .dropdown-menu,
@@ -524,13 +549,13 @@ NAVBAR
 }
 
 .navbar-b .dropdown-menu .dropdown-item:hover {
-  background-color: #0078ff;
+  background-color: #ff6b00;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .navbar-b .dropdown-menu .dropdown-item.active {
-  background-color: #0078ff;
+  background-color: #ff6b00;
 }
 
 /* Hamburger Navbar */
@@ -644,15 +669,15 @@ INTRO
 
 .intro-single .breadcrumb {
   background-color: transparent;
-  color: #0078ff;
+  color: #ff6b00;
 }
 
 .intro-single .breadcrumb .breadcrumb-item:before {
-  color: #cde1f8;
+  color: #ffe4cc;
 }
 
 .intro-single .breadcrumb .breadcrumb-item.active {
-  color: #cde1f8;
+  color: #ffe4cc;
 }
 
 .intro-single .breadcrumb a {
@@ -681,7 +706,7 @@ ABOUT
 }
 
 .skill-mf .progress {
-  background-color: #cde1f8;
+  background-color: #ffe4cc;
   margin: .5rem 0 1.2rem 0;
   border-radius: 0;
   height: .7rem;
@@ -689,7 +714,7 @@ ABOUT
 
 .skill-mf .progress .progress-bar {
   height: .7rem;
-  background-color: #0078ff;
+  background-color: #ff6b00;
 }
 
 /*
@@ -727,17 +752,17 @@ PORTFOLIO
 }
 
 .work-content .w-more .w-ctegory {
-  color: #0078ff;
+  color: #ff6b00;
 }
 
 .work-content .w-like {
   font-size: 2.5rem;
-  color: #0078ff;
+  color: #ff6b00;
   float: right;
 }
 
 .work-content .w-like a {
-  color: #0078ff;
+  color: #ff6b00;
 }
 
 .work-content .w-like .num-like {
@@ -780,7 +805,7 @@ TESTIMONIALS
 
 .testimonial-box .comit {
   font-size: 2rem;
-  color: #0078ff;
+  color: #ff6b00;
   background-color: #fff;
   width: 52px;
   height: 52px;
@@ -821,8 +846,8 @@ CONTACT
 */
 
 #sendmessage {
-  color: #0078ff;
-  border: 1px solid #0078ff;
+  color: #ff6b00;
+  border: 1px solid #ff6b00;
   display: none;
   text-align: center;
   padding: 15px;
@@ -879,15 +904,15 @@ BUTTON
 }
 
 .button:hover {
-  background-color: #0062d3;
+  background-color: #e65c00;
   color: #fff;
   transition: all 500ms ease;
 }
 
 .button-a {
-  background-color: #0078ff;
+  background-color: #ff6b00;
   color: #fff;
-  border-color: #cde1f8;
+  border-color: #ffe4cc;
 }
 
 .button-big {
@@ -996,5 +1021,24 @@ BUTTON
 @media (max-width: 768px) {
   .back-to-top {
     bottom: 15px;
+  }
+
+  .navbar-b {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .navbar-b .navbar-brand img {
+    max-width: 80px;
+  }
+
+  .navbar-b .navbar-nav .nav-link {
+    padding: 0.5rem 1rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .navbar-b .navbar-brand img {
+    max-width: 60px;
   }
 }
